# python4cpm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: dev-artifact  dev-artifact.yml  latest-release-and-tag.yml  latest-release.yml  latest-tag-release.yml  latest-tag.yml  lint.yml  merge-latest-tag.yml  pr-dotnet-dll.yml  pr-lint.yml  pr-python-module.yml  pypi-release.yml  python4cpm-tests.yml  release-dev.yml  release-latest.yml  release-major.yml  release-minor.yml  release-pypi.yml  release-update-platform.yml  release-update.yml  release-version.yml  test.yml
examples/: credmanagement.py  myappcredmanager.py  postgrescredmanager.py  simpleauthcredmanager.py  template.py
examples/python4cpm/: postgrescredmanager.py  simpleauthcredmanager.py
examples/python4cpmhandler/: postgrescredmanager.py  simpleauthcredmanager.py
src/plugin/: BaseAction.cs  Change.cs  ChangeAction.cs  Crypto.cs  EncryptedString.cs  EnvHandler.cs  Exceptions.cs  Logon.cs  LogonAction.cs  Policy-Python4CPM.ini  Policy-Python4CPM.xml  Prereconcile.cs  PrereconcileAction.cs  Python4CPM.csproj  Python4CPMProcess.ini  Python4CPMPrompts.ini  Reconcile.cs  ReconcileAction.cs  Secrets.cs  Verify.cs  VerifyAction.cs
src/python4cpm/: __init__.py  accounts.py  args.py  crypto.py  devhelper.py  envhandler.py  exithandler.py  logger.py  loggerhandler.py  nethelper.py  python4cpm.py  python4cpmhandler.py  secret.py  secrets.py  tpchelper.py
tests/: dotnetdll.py  logger.py  python4cpmtests.py  pythonmodule.py  tests.py
tests/dotnetdll-scripts/: assert_env_mappings.py  bad_handler.py  fail_recoverable.py  fail_recoverable_handler.py  fail_unrecoverable.py  fail_unrecoverable_handler.py  success.py  success_handler.py  unexpected_exception.py
tests/env/: args.json
tests/manual/: Net.cmd  (+3 more)
(+8 files in other folders)
