[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python4cpm"
version = "1.1.5"
description = "Python for CPM"
authors = [
  { name = "Gonzalo Atienza Rela", email = "gonatienza@gmail.com" }
]
dependencies = []
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["python4cpm"]

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
